Fixing the spacing between the banner and text for holding cards.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -165,6 +165,7 @@ span {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-column-gap: 8px;
+        margin-top: 1rem;
 
         @include tabletWidth {
             grid-column-gap: 12px;
@@ -187,7 +188,7 @@ span {
                 text-align: center;
                 width: 100%;
                 position: absolute;
-                top: -1.5rem;
+                top: -2.5rem;
                 left: 0;
                 z-index: 10;
             }
